@@ -1,7 +1,10 @@
+2011-02-21  Steffen Kamper  <steffen@typo3.org
+
+	* Fixed bug #17684 Admin Panel renders invalid markup (Thanks to Markus Klein)
+
 2011-02-20  Steffen Kamper  <steffen@typo3.org
 
 	* Follow-up to #17592: ExtDirect API calls are splitted in single requests and slows down page loading
-	* Fixed bug #17669: htmlArea RTE: Dialogue window positioning properties not honoured
 
 2011-02-20  Stanislas Rolland  <typo3@sjbr.ca>
 
